--- a/LECTURE4.html
+++ b/LECTURE4.html
@@ -481,13 +481,13 @@ dependence</strong>.</p>
 <h2>Regulation!</h2>
 <p>First of all, we have already established that positive feedbacks are
 not sustainable, because increases mean faster increases, mean faster
-increases, etc. (a vicious circle). Density dependence is a kind of
-feedback, but it is NOT a positive feedback. Instead, it is a
-<em>negative feedback</em>! Which is also known as a <em>stabilizing
-feedback</em>. As we discussed before, negative feedbacks are essential
-for well-regulated systems. Recall the example of homeostasis in
-organismal biology. If blood sugar goes up, the body will work to lower
-it, and vice versa.</p>
+increases, etc. (i.e., the vicious circle of exponential growth).
+Density dependence is a kind of feedback, but it is NOT a positive
+feedback. Instead, it is a <em>negative feedback</em>! Which is also
+known as a <em>stabilizing feedback</em>. As we discussed before,
+negative feedbacks are essential for well-regulated systems. Recall the
+example of homeostasis in organismal biology. If blood sugar goes up,
+the body will work to lower it, and vice versa.</p>
 <p>Same with populations. In a regulated population, an increase in
 abundance will cause a decrease in the population growth rate, and a
 decrease in abundance will cause an increase in the population growth
@@ -570,7 +570,9 @@ legend(&quot;bottomleft&quot;,col=c(&quot;green&quot;,&quot;red&quot;),lty=c(1,1
 zero??</p>
 <p>This equilibrium is known as <strong>K</strong>, or <strong>carrying
 capacity</strong>?</p>
-<p><img src="gstab.png" /></p>
+<p>Equilibria can be stable or unstable (see below). This distinction is
+critical for wildlife managers and conservation biologists to
+understand.</p>
 </div>
 <div id="stable-and-non-stable-equilibria" class="section level2">
 <h2>Stable and non-stable equilibria</h2>
@@ -578,6 +580,7 @@ capacity</strong>?</p>
 equilibrium point</p>
 <p>A <strong>non-stable equilibrium</strong>, when perturbed, does NOT
 return to the equilibrium point</p>
+<p><img src="gstab.png" /></p>
 <p>Is the image on the left a stable or a non-stable equilibrium??</p>
 <p>What about the image on the right?</p>
 <p>What about <strong>K</strong>, or <strong>carrying
@@ -613,7 +616,8 @@ named <em>Births</em> and one [Flow Out] named <em>Deaths</em>. Both
 <em>Births</em> and <em>Deaths</em> should be defined as the product of
 <em>Turtles</em> and per-capita rates, respectively called <em>Births
 per capita</em> and <em>Deaths per capita</em> (each defined on the
-canvas as [Variables]). This model should be very familiar!!</p></li>
+canvas as [Variables]). This model should be very familiar by
+now!!</p></li>
 <li><p>Initialize the population of <em>Turtles</em> to 5 (way below
 carrying capacity).</p></li>
 <li><p>Make four new [Variables] on the canvas, to represent the four
@@ -656,9 +660,7 @@ capacity?<br />
 <strong>Q:</strong> Which population is more likely to be found at or
 near K in nature? A population with very large <span
 class="math inline">\(r_{max}\)</span> or very small <span
-class="math inline">\(r_{max}\)</span>?<br />
-<strong>Q:</strong> How does this discussion relate to the concept of
-“r-selected” and “K-selected” species?</p>
+class="math inline">\(r_{max}\)</span>?</p>
 <p><a href="LECTURE5.html">–go to next lecture–</a></p>
 </div>
 
