--- a/LECTURE5.html
+++ b/LECTURE5.html
@@ -541,16 +541,19 @@ href="https://insightmaker.com/insight/2ewOk7vSFlpEGxdu4Hvx9G/logistic-bd">here<
 <p>It should be structured something like this:</p>
 <p><img src="IM5.jpg" style="width:70.0%" /></p>
 <ol start="2" style="list-style-type: decimal">
-<li><p>Now add a new [Variable] in InsightMaker called <em>Allee
-threshold</em>. Set this variable equal to 200 (it is a ‘constant’ and
-will remain at this value through the simulation).</p></li>
+<li><p>Now add a new [Variable] in InsightMaker called <em>Optimal
+abundance</em> or <em>Nopt</em>. This is the level of abundance where
+the population sees all the benefits of social aggregation, yet little
+of the negative effects of crowding or resource limitation. Set this
+variable equal to 200 (it is a ‘constant’ and will remain at this value
+through the simulation).</p></li>
 <li><p>As for the other parameters, set them as follows:</p></li>
 </ol>
 <ul>
-<li>Initial abundance: 201 (just above the Allee threshold)</li>
-<li>Density dependence on birth rate: 0.0004<br />
+<li>Initial abundance: 201 (just above the optimum)</li>
+<li>Density dependence on birth rate: 0.004<br />
 </li>
-<li>Density dependence on mortality: 0.0001<br />
+<li>Density dependence on mortality: 0.001<br />
 </li>
 <li>Max birth rate: 0.8<br />
 </li>
@@ -559,11 +562,13 @@ will remain at this value through the simulation).</p></li>
 <ol start="4" style="list-style-type: decimal">
 <li>Now let’s use a <em>Conditional (IF-THEN-ELSE) statement</em> to
 specify an Allee effect. The population experiences maximum growth rate
-at the Allee threshold. If the population is above the Allee threshold,
-the population exhibits (stabilizing) negative density dependence. If
-the population is below the Allee threshold, then the population
-experiences positive density dependence- whereby individuals in smaller
-populations have <em>lower</em> overall fitness.</li>
+at the Allee threshold. If the population is above the optimum, the
+population exhibits (stabilizing) negative density dependence. If the
+population is below the Allee threshold, then the population experiences
+positive density dependence- whereby individuals in smaller populations
+have <em>lower</em> overall fitness. Positive density dependence can be
+a destabilizing force if it forces population growth to become negative
+at low abundances.</li>
 </ol>
 <p>To do this, define your <em>Births per Capita</em> using the
 following syntax (or equivalent):</p>
@@ -586,13 +591,14 @@ For example, you could define the per-capita birth rate this way:</p>
 <ol start="5" style="list-style-type: decimal">
 <li>If we are running out of time in class, load the model (and clone
 it!) using <a
-href="https://insightmaker.com/insight/3iPYWl5vT2niZ1WGtC7C7Y/Allee-effect-lecture-5">this
+href="https://insightmaker.com/insight/5mshbXRri1fBJEYNNHS2ZY/Allee-effect-model">this
 link</a>!</li>
 </ol>
 <p>Now you can try to answer the following questions:</p>
+<p><strong>Q</strong>: What is carrying capacity (K) for this model?</p>
 <p><strong>Q</strong>: Carrying capacity (K) represents one equilibrium
 point in this model. Try to find another equilibrium point- that is, a
-point where the population neither grows nor declines. [Top Hat]</p>
+point where the population neither grows nor declines [Top Hat]</p>
 <p><strong>Q</strong>: is this equilibrium a <em>stable equilibrium</em>
 or an <em>unstable equilibrium</em>? [Top Hat]</p>
 <p>Hopefully it is clear why Allee effects can spell bad news for rare
