--- a/LECTURE6.html
+++ b/LECTURE6.html
@@ -496,8 +496,8 @@ the next 4 years, assuming the reintroduction strategy was successful?
 <h2>Aside: sex-structured vital rates</h2>
 <p><strong>Q:</strong> Can you think of some real-world examples where
 vital rates might differ between males and females?</p>
-<p><strong>Q:</strong> Is sex structure important to consider when
-modeling populations? Why or why not?</p>
+<p><strong>Q:</strong> When is sex structure important to consider when
+modeling populations?</p>
 <p><img src="tamarin1.jpg" style="width:40.0%" /></p>
 <p><strong>Q:</strong> Imagine a population of 100 golden-headed lion
 tamarins (<em>Leontopithecus chrysomelas</em>) that consists of all
