--- a/LECTURE6.html
+++ b/LECTURE6.html
@@ -690,13 +690,12 @@ the simulation?</p>
 adults so that the population exhibits smooth exponential growth for all
 three stage classes (and the population as a whole)? This is called
 <strong>Stable Stage Distribution (SSD)</strong></p>
-<p>4d. Now change the <strong>Adult mort rate</strong> to 0.65. What
-happens? Is this a growing population? How many subadults would need to
-be added to the population each year (population supplementation) to
-maintain a stable or growing population of &gt;20 adults? [Top
-Hat]</p></li>
+<p>4d. Now change the adult survival rate to 0.35. What happens? Is this
+a growing population? How many yearlings would need to be added to the
+population each year (population supplementation) to maintain a stable
+or growing population of &gt;20 adults? [Top Hat]</p></li>
 </ol>
-<p><strong>Q</strong>: Is supplementation the best strategy for
+<p>What do you think? Is supplementation the best strategy for
 conserving this population?</p>
 <p><a href="LECTURE7.html">–go to next lecture–</a></p>
 </div>
