--- a/LAB4.html
+++ b/LAB4.html
@@ -707,7 +707,7 @@ for(s in 1:ncol(TMat)){
 }
 axis(1,at=seq(1,nYears+1),labels = seq(0,nYears))   # label the axis
 if(AgeStructured){
-  leg &lt;-  paste(&quot;Age&quot;,seq(0,(ncol(TMat))-1))
+  leg &lt;-  paste(&quot;Age&quot;,seq(1,(ncol(TMat))))
 }else{
   leg &lt;- paste(&quot;Stage&quot;,seq(1,ncol(TMat))) 
 }
