--- a/LAB4.html
+++ b/LAB4.html
@@ -1035,8 +1035,8 @@ Territorial adults are the primary reproductive stage, and produce an
 average of 2.5 fledged hatchlings each year, half of which are female.
 Non-territorial adults produce 1.1 new fledged hatchlings each year on
 average, half of which are female. We ran a female-only matrix
-population model, and we initialized the population with 800 hatchlings,
-150 juveniles, 75 non-territorial adults and 50 territorial adults.</p>
+population model, and we initialized the population with 800 juveniles,
+150 subadults, 75 non-territorial adults and 50 territorial adults.</p>
 </blockquote>
 <p>4a (image upload). Upload an image file of the full transition matrix
 (16 numbers, arranged in 4 rows and 4 columns) to WebCampus. To maximize
