--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -479,11 +479,11 @@ put in all the different flows? It would be tedious, and you could
 easily run into errors that would be hard to uncover!</p>
 <p><img src="teasel1.jpg" style="width:30.0%" /></p>
 <p>Consider the teasel example from our textbook. It’s possible to
-implement this model in InsightMaker, but it would be tedious and prone
-to error. And this is far from the most complicated populations out
-there (although notice that plants can do some things that vertebrate
-animals can’t do- for instance go backwards in developmental stage. With
-matrix models, there is an easier way!</p>
+implement this model in InsightMaker, but it would be tedious and
+potentially prone to error. And this is far from the most complicated
+populations out there (although notice that plants can do some things
+that vertebrate animals can’t do- for instance go backwards in
+developmental stage. With matrix models, there is an easier way!</p>
 <p><img src="gotelli3_6.jpg" style="width:50.0%" /></p>
 <p>The population vital rates for pretty much any age-structured or
 stage-structured population can be represented as a <strong>transition
@@ -1056,8 +1056,8 @@ Territorial adults are the primary reproductive stage, and produce an
 average of 2.5 fledged hatchlings each year, half of which are female.
 Non-territorial adults produce 1.1 new fledged hatchlings each year on
 average, half of which are female. We ran a female-only matrix
-population model, and we initialized the population with 800 hatchlings,
-150 juveniles, 75 non-territorial adults and 50 territorial adults.</p>
+population model, and we initialized the population with 800 juveniles,
+150 subadults, 75 non-territorial adults and 50 territorial adults.</p>
 </blockquote>
 <p>For more on matrix population models, the bible of this subject is <a
 href="https://www.amazon.com/gp/huc/view.html?ie=UTF8&amp;newItems=C1DH1414B1C6AK%2C1">this
